--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint . --ext .ts,.tsx,.js,.jsx",
+    "lint": "next lint .",
     "type-check": "tsc --noEmit",
     "analyze": "cross-env ANALYZE=true next build"
   },
