--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint .",
+    "lint": "eslint --max-warnings=0 .",
     "type-check": "tsc --noEmit",
     "analyze": "cross-env ANALYZE=true next build"
   },
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "@builder.io/partytown": "^0.10.3",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.39.1",
     "@next/bundle-analyzer": "^16.0.3",
     "@types/node": "^20.14.0",
     "@types/react": "^19.2.6",
@@ -47,6 +49,7 @@
     "cross-env": "^10.1.0",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
+    "eslint-config-prettier": "^10.1.8",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.5.0"
