--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "cross-env BASELINE_BROWSER_MAPPING_IGNORE_OLD_DATA=true NODE_NO_WARNINGS=1 next dev",
+    "build": "cross-env BASELINE_BROWSER_MAPPING_IGNORE_OLD_DATA=true next build",
     "start": "next start",
     "lint": "eslint --max-warnings=0 .",
     "type-check": "tsc --noEmit",
@@ -24,7 +24,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.0",
     "lucide-react": "^0.427.0",
-    "next": "^16.0.3",
+    "next": "^16.0.8",
     "next-lazy-hydration-on-scroll": "^1.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -40,15 +40,16 @@
     "@builder.io/partytown": "^0.10.3",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.39.1",
-    "@next/bundle-analyzer": "^16.0.3",
+    "@next/bundle-analyzer": "^16.0.8",
     "@types/node": "^20.14.0",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.0",
     "babel-plugin-react-compiler": "^1.0.0",
+    "baseline-browser-mapping": "^2.9.5",
     "cross-env": "^10.1.0",
     "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.3",
+    "eslint-config-next": "^16.0.8",
     "eslint-config-prettier": "^10.1.8",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
