feat: Implement foundational UI for home, authentication, and static content pages, and add a testing guide.

--- a/.gitignore
+++ b/.gitignore
@@ -489,3 +489,4 @@ docs/PERFORMANCE_BASELINE.md
 docs/PPR_STRATEGY.md
 docs/requirements-catalog.md
 docs/requirements-gap-matrix.md
+docs/TESTING_GUIDE.md
